[package]
name = "soup"
version = "0.5.0"
authors = ["Paul Woolcock <paul@woolcock.us>"]
license = "GPL-3.0"
description = """
Inspired by the python library BeautifulSoup, this is a layer on top of html5ever that adds a different API for querying and manipulating HTML
"""
documentation = "https://docs.rs/soup"
repository = "https://gitlab.com/pwoolcoc/soup.git"

[dependencies]
html5ever = "0.22"
regex = { version = "1.0.5", optional = true }

[dev-dependencies]
reqwest = "0.9.4"

[features]
default = ["regex"]
